--- a/ClassLibrary1/PublicClass.csproj
+++ b/ClassLibrary1/PublicClass.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2B8DC7F5-D5C7-49D1-8F81-BEF3E9E3F7D1}</ProjectGuid>
+    <ProjectGuid>{05F63C4C-AFFE-4C05-B50C-C4E8CB5BCA51}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Services</RootNamespace>
-    <AssemblyName>Services</AssemblyName>
+    <RootNamespace>PublicClass</RootNamespace>
+    <AssemblyName>PublicClass</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,25 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountService.cs" />
-    <Compile Include="ApprovalService.cs" />
-    <Compile Include="DocumentService.cs" />
-    <Compile Include="EmailService.cs" />
+    <Compile Include="Constant.cs" />
+    <Compile Include="Roles.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\PublicClass.csproj">
-      <Project>{05F63C4C-AFFE-4C05-B50C-C4E8CB5BCA51}</Project>
-      <Name>PublicClass</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Entities\Entities.csproj">
-      <Project>{4D4152A2-55BB-452B-8AAD-E83A61B0F764}</Project>
-      <Name>Entities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Repository\Repository.csproj">
-      <Project>{7C0B5AD1-E507-4A03-B609-A1722BC8CF2A}</Project>
-      <Name>Repository</Name>
-    </ProjectReference>
+    <Compile Include="Status.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
