--- a/DocumentManagementSystem/Web.config
+++ b/DocumentManagementSystem/Web.config
@@ -18,6 +18,11 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <roleManager enabled="true" defaultProvider="CustomProvider">
+      <providers>
+        <add name="CustomProvider" type="DocumentManagementSystem.Provider.CustomProvider" />
+      </providers>
+    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
