--- a/DocumentManagementSystem/Web.config
+++ b/DocumentManagementSystem/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="ConnString" value="Server=127.0.0.1,1033;Database=AISDB;UID=bfiuser_dev;Pwd=Bfi2025" />
+    <add key="ConnString" value="Server=xxxx;Database=xxx;UID=xxx;Pwd=xxx" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
